--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,7 @@ bower_components
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
-
+generated/prisma/
 # Dependency directories
 node_modules/
 jspm_packages/
@@ -134,3 +134,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+/src/generated/prisma
